--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Eventually by HTML5 UP
+	Gideon Doe Bokomi
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -15,9 +15,9 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Eventually</h1>
-				<p>A simple template for telling the world when you'll launch<br />
-				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
+				<h1>Gideon Doe Bokomi</h1>
+				<p>Staffordshire University<br />
+				Computer Games Design and Programming.</p>
 			</header>
 
 		<!-- Signup Form -->
